--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,8 +59,10 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-top: auto;
+    margin-bottom: auto;
+
 }
 .footer {
   position: absolute;
